# closet

./: .gitignore  README.md  TODO.md  docker-compose.yml  justfile  pyproject.toml  pytest.ini  report.md
.github/workflows/: check-lockfile.yml  run-tests.yml  update-playlist.yml  update-ytdlp.yml
data/: enriched_playlist.json  log.html  playlist.json  playlist_with_subtitles.json  sample_enriched_playlist.json
frontend/: package-lock.json
frontend/src/routes/: +page.svelte
scripts/: conditional_commit.py
src/closet/: __init__.py  config.py  enrich.py  errors.py  get_new_videos.py  get_structured_data.py  get_subtitles.py  main.py  playlist.py  popularity.py  recommend.py  report.py  subtitles.py
src/closet/experimental/: README.md  api.py  index.py
tests/: conftest.py  test_get_structured_data.py  test_get_subtitles.py  test_main.py  test_popularity.py  test_recommend.py  test_report.py
tests/data/: enriched_playlist.json  playlist.json  playlist_with_subtitles.json
