[project]
name = "closet"
version = "0.2.1"
description = "Dataset curation for Criterion Collection Closet Picks"
readme = "README.md"
authors = [
    { name = "Garrett Mooney", email = "garrettrmooney@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "mirascope[google]>=1.25.5",
    "polars>=1.32.0",
    "rich>=13.7.1",
    "srsly>=2.4.8",
    "typer>=0.12.3",
    "yt-dlp>=2024.7.25",
]

[project.scripts]
update-playlist = "closet.main:main"
report = "closet.report:main"
popularity = "closet.popularity:main"
recommend = "closet.recommend:main"
index = "closet.experimental.index:main"
api = "closet.experimental.api:main"

[project.optional-dependencies]
dev = ["pytest"]
experimental = ["fastapi>=0.111.0", "uvicorn>=0.29.0", "redis>=5.0.4"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
